# shop-manager

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/shop-manager/: Cargo.toml
programs/shop-manager/src/: lib.rs
tests/: shop-manager.ts
